--- a/curso-jsf-e-primefaces-essencial/pom.xml
+++ b/curso-jsf-e-primefaces-essencial/pom.xml
@@ -18,6 +18,14 @@
 	
 	
 	<dependencies>
+	
+	<dependency>
+		<groupId>org.jboss.weld.servlet</groupId>
+		<artifactId>weld-servlet</artifactId>
+		<version>2.4.0.Final</version>
+		<scope>compile</scope>
+	</dependency>
+	
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.faces</artifactId>
