--- a/curso-jsf-e-primefaces-essencial/pom.xml
+++ b/curso-jsf-e-primefaces-essencial/pom.xml
@@ -19,6 +19,15 @@
 	
 	<dependencies>
 	
+		
+		<dependency>
+    <groupId>javax.annotation</groupId>
+    <artifactId>javax.annotation-api</artifactId>
+    <version>1.3.1</version>
+	</dependency>
+	
+	
+	
 	<dependency>
 		<groupId>org.jboss.weld.servlet</groupId>
 		<artifactId>weld-servlet</artifactId>
