--- a/curso-jsf-e-primefaces-essencial/pom.xml
+++ b/curso-jsf-e-primefaces-essencial/pom.xml
@@ -19,12 +19,25 @@
 	
 	<dependencies>
 	
-
-		
+		<!-- Runtime, com.sun.xml.bind module -->
 		<dependency>
-    <groupId>javax.annotation</groupId>
-    <artifactId>javax.annotation-api</artifactId>
-    <version>1.3.1</version>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+		
+		<!-- API, java.xml.bind module -->
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+			<version>2.3.2</version>
+		</dependency>
+		
+		
+	<dependency>
+    	<groupId>javax.annotation</groupId>
+    	<artifactId>javax.annotation-api</artifactId>
+    	<version>1.3.1</version>
 	</dependency>
 	
 	
