--- a/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
+++ b/curso-jsf-e-primefaces-essencial/src/main/webapp/WEB-INF/web.xml
@@ -6,9 +6,16 @@
   
   <display-name>curso-jsf-e-primefaces-essencial</display-name>
 
+
 	<welcome-file-list>
 		<welcome-file>GestaoEmpresas.xhtml</welcome-file>
 	</welcome-file-list>
+
+
+	<context-param>
+		<param-name>primefaces.FONT_AWESOME</param-name>
+		<param-value>true</param-value>
+	</context-param>
 
 	<context-param>
 		<param-name>javax.faces.PROJECT_STAGE</param-name>
